# indico-client-python

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS  CHANGES.txt  CODEOWNERS  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  codeship-services.yml  codeship-steps.yml  docker-compose.yaml  docs.Dockerfile  env.encrypted  harbor-dockercfg.encrypted  indico_api_token.txt  pyproject.toml  setup.cfg  setup.py  test_async.py  test_blob.py  test_imgs.py  test_paginator.py  test_rev.py  test_sub.py  tox.Dockerfile  tox.ini  wm_object_detection_workflow_example.py
.github/: pull_request_template.md
.github/workflows/: linter.yml  test-steps.yml  test.yml
.harness/: commitinputset.yaml  prinputset.yaml  publish_python_sdk.yaml  pythonsdkpublish.yaml  pythonsdkrelease.yaml  snyk_filter.yaml
docs/: .buildinfo  auto-review.html  blueprint-types.html  blueprints.html  client.html  concepts.html  conf.py  config.html  configuration.rst  dataset-type.html  datasets.html  docextract-intro.html  docextract.html  docextract_intro.html  docextract_settings.html  document-report-ex.html  document_report.html  document_report_ex.html  document_report_types.html  examples.html  exports.html  filters.html  genindex.html  graphql-ex.html  graphql_queries.html  image-dataset-ex.html  image-predictions-ex.html  index.html  index.rst  integration-types.html  integration.html  intro.html  jobs-type.html  jobs.html  migration.html  model-group-type.html  model-type.html  model_group.rst  model_groups.html  model_predictions.html  (+29 more)
docs/_sources/: auto-review.rst.txt  auto_review_doc.rst.txt  client.rst.txt  concepts.rst.txt  config.rst.txt  datasets.rst.txt  docextract-intro.rst.txt  docextract.rst.txt  docextract_intro.rst.txt  docextract_settings.rst.txt  document_report.rst.txt  document_report_ex.rst.txt  document_report_types.rst.txt  examples.rst.txt  graphql_queries.rst.txt  image-predictions-ex.rst.txt  index.rst.txt  intro.rst.txt  jobs-type.rst.txt  jobs.rst.txt  migration.rst.txt  model-group-type.rst.txt  model-type.rst.txt  model_groups.rst.txt  model_predictions.rst.txt  object-detection.rst.txt  ocr-object-parse-ex.rst.txt  review-intro.rst.txt  singleocr-ex.rst.txt  storage.rst.txt  submission-ex.rst.txt  submissions.rst.txt  train-predict-ex.rst.txt  user-metrics-types.rst.txt  workflow-ex.rst.txt  workflow-intro.rst.txt  workflow-metrics-types.rst.txt  workflow-metrics.rst.txt  workflow-types.rst.txt  workflow.rst.txt
docs/_static/: basic.css  doctools.js  pygments.css
docs/doctrees/: client.doctree  concepts.doctree  config.doctree  dataset-type.doctree  datasets.doctree  docextract.doctree  docextract_settings.doctree  environment.pickle  examples.doctree  graphql-ex.doctree  index.doctree  intro.doctree  jobs-type.doctree  jobs.doctree  model-group-type.doctree  model-type.doctree  model_groups.doctree  model_predictions.doctree  singleocr-ex.doctree  storage.doctree  train-predict-ex.doctree  training-progress.doctree
docsrc/: Makefile  auto-review.rst  blueprint-types.rst  blueprints.rst  classes.rst  concepts.rst  conf.py  dataset-types.rst  datasets.rst  docextract-intro.rst  docextract_settings.rst  document-report-types.rst  document_report.rst  document_report_types.rst  env-vars.csv  examples.rst  exports.rst  filters.rst  graphql-ex.rst  image-dataset-ex.rst  index.rst  integration-types.rst  integration.rst  intro.rst  job-types.rst  jobs.rst  migration.rst  model-groups.rst  model_predictions.rst  review-intro.rst  review-submissions.rst  submissions.rst  training-progress.rst  types.rst  user-metrics-ex.rst  user-metrics-types.rst  user-metrics.rst  user_metrics.rst  workflow-components.rst  workflow-intro.rst  (+3 more)
examples/: aio_client.py  airline-comments.csv  create-download-export.py  create-image-dataset.py  custom_client.py  dir-extract.py  get-document-report.py  get-image-predictions.py  get-training-model-progress.py  get-user-metrics.py  get-workflow-metrics.py  graphql.py  ocr-object-parsing.py  single-doc-extraction.py  submission-filters.py  submission.py  train-classification-model.py  typed_calls.py  workflow.py
examples/classifier_extraction_workflow/: component_demo.py  component_links.py  config.py  queries.py
indico/: __init__.py  _version.py  errors.py  typing.py
indico/client/: __init__.py  client.py  request.py
indico/config/: config.py
indico/filters/: __init__.py  base.py  field_blueprints.py  submission.py  (+1 more)
indicoio/: __init__.py  config.py  errors.py
readme_docs/: Dockerfile  build_docs.sh  docs.Dockerfile  harness-docs.yaml  pipeline.yaml  push_docs.sh
scripts/: build_docs.sh  deploy.sh  push_docs.sh  test.sh
stubs/: jsons.pyi  msgpack.pyi
tests/: conftest.py  test_base_client.py  test_document_extraction.py  test_field_blueprints.py  test_model_group.py  test_pdfextraction.py  test_submission_management.py
(+149 files in other folders)
