[project]
name = "indico-client"
description = "A Python Wrapper for indico app API."
readme = "README.rst"
license = { text = "MIT License" }
authors = [{ name = "indico", email = "engineering@indico.io" }]
requires-python = ">=3.9"
classifiers = ["License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13"]
dependencies = ["requests>=2.22.0", "setuptools>=41.4.0", "deprecation>=2.1.0", "jsons", "aiohttp[speedups]"]
dynamic = ["version"]

[project.optional-dependencies]
all = ["msgpack>=0.5.6", "msgpack-numpy==0.4.4.3", "numpy>=1.16.0", "pandas>=1.0.3"]
datasets = ["pandas>=1.0.3"]
deserialization = ["msgpack>=0.5.6", "msgpack-numpy==0.4.4.3", "numpy>=1.16.0"]
exports = ["pandas>=1.0.3"]
test = ["tox==4.11.3"]
deploy = ["twine==3.3.0"]

[project.urls]
Homepage = "https://github.com/IndicoDataSolutions/indico-client-python"
Documentation = "https://indicodatasolutions.github.io/indico-client-python/"

[build-system]
requires = ["setuptools>=41.4.0", "versioneer"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { exclude = ["tests*"] } }

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst"]

[tool.isort]
known_first_party = ["indico"]
profile = "black"

[tool.mypy]
strict = true
packages = ["indico"]
mypy_path = "./stubs:${MYPYPATH}"
